--- a/package.json
+++ b/package.json
@@ -19,15 +19,19 @@
   },
   "homepage": "https://github.com/lizgorb/pull-request-cop#readme",
   "dependencies": {
-    "@actions/core": "^1.2.4",
-    "@actions/github": "^2.2.0"
+    "@actions/core": "^1.10.0",
+    "@actions/github": "^5.1.1"
   },
   "devDependencies": {
-    "@types/jest": "^25.2.1",
-    "@zeit/ncc": "^0.22.1",
-    "jest": "^26.0.1",
-    "ts-jest": "^25.5.1",
-    "ts-node": "^8.10.1",
-    "typescript": "^3.8.3"
+    "@types/jest": "^29.2.3",
+    "@typescript-eslint/eslint-plugin": "^5.43.0",
+    "@typescript-eslint/parser": "^5.43.0",
+    "@zeit/ncc": "^0.22.3",
+    "eslint": "^8.27.0",
+    "jest": "^29.3.1",
+    "prettier": "^2.7.1",
+    "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.3"
   }
 }
