--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
   "homepage": "https://github.com/lizgorb/pull-request-cop#readme",
   "dependencies": {
     "@actions/core": "^1.10.0",
-    "@actions/github": "^5.1.1"
+    "@actions/github": "^6.0.0"
   },
   "devDependencies": {
     "@types/jest": "^29.2.3",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.43.0",
-    "@zeit/ncc": "^0.22.3",
+    "@vercel/ncc": "^0.38.2",
     "eslint": "^8.27.0",
     "jest": "^29.3.1",
     "prettier": "^2.7.1",
